# devclaw

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  devclaw.db  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.json
.claude/agents/: invariant-guard.md
.claude/commands/: ship.md
.claude/hooks/: docs-reminder.py  main-branch-guard.py
.claude/rules/: cognition-prompts.md  git-workflow.md  spec-lifecycle.md  testing.md
.github/workflows/: ci.yml
.sandcastle/: .dockerignore  Dockerfile  Dockerfile.dotnet
agents/: curator-claw.md  dev-claw.md  intake-claw.md  planner-claw.md  propose-claw.md  research-claw.md
devclaw/: __init__.py  _env_loader.py  bookmark.py  claude_sdk_engine.py  claude_trust.py  cli.py  cognition.py  dashboard.py  delivery.py  deploy.py  dispatch_gate.py  elicitation.py  engine.py  eval_judge.py  evals.py  goal_engine.py  goal_evaluator.py  goal_grill.py  goal_merge.py  goal_models.py  goal_planner.py  goal_research.py  goal_service.py  goal_store.py  goal_summary.py  goal_tick.py  host_runner.py  limits.py  llm_call.py  model_tiers.py  planner.py  preview.py  project_registry.py  project_service.py  project_store.py  repo.py  review_gate.py  runner_io.py  sandcastle_runner.py  server.py  (+11 more)
devclaw/delivery/: __init__.py  deploy.py  repo.py
devclaw/engine/: __init__.py  claude_sdk.py  host.py  runner_io.py  sandcastle.py  stub.py  workspace.py
devclaw/goal/: __init__.py  admission.py  checklist.py  cycle_report.py  decomposer.py  delivery_strategy.py  engine.py  evaluator.py  firmed.py  grill.py  merge.py  models.py  night_report.py  notify.py  planner.py  reconcile.py  remote_checks.py  repo_brief.py  research.py  run_summary.py  self_issue.py  service.py  state.py  store.py  summary.py  tick.py  tick_context.py  tick_dispatch.py  tick_donegate.py  tick_guards.py  tick_settle.py  transitions.py  triage.py  world_research.py
devclaw/loom/: __init__.py  limits.py  test_integrity.py  trace.py
devclaw/prompts/: __init__.py  browser-reachability.md  decomposer.md  eval-judge.md  firming.md  goal-evaluator.md  goal-planner.md  owner-summary.md  plan-goal.md  plan-spec.md  research-discovery.md  review-gate.md  scope-grill-contract.md  scope-grill.md  sdk-fix-bug.md  sdk-implement-feature.md  sdk-onboard.md  sdk-review-repository.md  self-triage.md  visual-judge.md  world-research.md
devclaw/quality/: README.md  __init__.py  browser_gate.py  e2e_coverage.py  eval_judge.py  gate_policy.py  reachability.py  visual_judge.py
devclaw/server/: __init__.py  (+5 more)
docs/: INDEX.md  architecture-curator.md  architecture-layers.md  architecture-orchestrator-port.md  architecture-tasks.md  architecture-v2.md  architecture.md  delivery-flows.md  design-build-from-scratch.md  engine-decision.md  env-vars.md  how-it-really-works.md  live-shakedown.md  task-execution-flow.md  vps-waiter-deploy.md
evals/: README.md  compare_engines.py  e2e_trace.py  guardrail-inventory.md  measure_passrate.py  measure_quality_todo.py  run.py  run_all.py  sandbox_e2e.py  validate_review_gate.py
examples/: README.md  lifekit-dashboard.goal.yaml
hooks/: post-tool-use.sh  pre-tool-use.sh  session-start.sh  stop.sh
openhands-runner/: requirements.txt  runner.py
orchestrator/: .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml
orchestrator/src/orchestrator/: __init__.py  atomic_check.py  cli.py  daemon.py  dispatch.py  events.py  graph.py  intake.py  mcp_server.py  notify.py  paths.py  pr_review.py  pr_review.yaml  run_summary.py  sandbox.py  status.py  supervisor.py  sweep.py
orchestrator/src/orchestrator/audits/: __init__.py  state_currency.py  state_currency.yaml
orchestrator/src/orchestrator/config/: atomic_rules.yaml  sandbox.yaml
orchestrator/src/orchestrator/nodes/: __init__.py  verify.py
orchestrator/src/orchestrator/runners/: __init__.py  _subprocess.py  code_task.py  propose_change.py  research_task.py
orchestrator/src/orchestrator/sandbox/: __init__.py  base.py  in_process.py  sandcastle.py
orchestrator/src/orchestrator/state/: __init__.py  models.py
orchestrator/tests/: conftest.py  test_atomic_check.py  test_cli.py  test_codex_backend.py  test_daemon.py  test_dispatch.py  test_events.py  test_graph.py  test_intake.py  test_intake_cli.py  test_lifecycle_announce.py  test_mcp_server.py  test_models.py  test_notify.py  test_pr_review.py  test_run_summary.py  test_runners.py  test_sandbox.py  test_sandbox_port.py  test_sandcastle_adapter.py  test_status.py  test_supervisor.py  test_sweep.py
python-runner/: runner.py
queue/: __init__.py  claim.py  drain.py  enqueue.py
routines/: doc-drift-audit.yaml
scripts/: backfill_devclaw_label.sh
skill-library/: _README.md  codebase-design.md  domain-modeling.md  resolving-merge-conflicts.md  tdd.md
src/: mcp-server.ts  sandcastle-runner.ts  state-store.ts  task-queue.ts
test/: runtime-review-readonly.ts  unit-planner.ts  unit-state-program.ts
tests/: __init__.py  conftest.py  goal_fakes.py  test_acp_command_config.py  test_answer_unknowns.py  test_browser_gate.py  test_browser_gate_doctrine.py  test_browser_gate_reachability.py  test_browser_gate_resolve.py  test_browser_gate_settle.py  test_cancel.py  test_cancel_goal.py  test_cancel_program_guard.py  test_claude_sdk_engine.py  test_claude_trust.py  test_cli.py  test_cli_breakdown.py  test_cli_cognition.py  test_cli_visual_judge.py  test_cognition.py  test_cognition_agent_sdk.py  test_cognition_envelope.py  test_cognition_timeout.py  test_console_config.py  test_console_evals_endpoint.py  test_console_goal_actions.py  test_console_goal_json_unknowns.py  test_console_goal_json_usage.py  test_console_node_vitals.py  test_console_problems_json.py  test_console_prs_endpoint.py  test_console_task_row_wire.py  test_container_hygiene.py  test_create_goal_warnings.py  test_cycle_report.py  test_dashboard.py  test_db_size_alert.py  test_db_vacuum.py  test_delivery.py  test_delivery_diff_stats.py  (+120 more)
v2/: .gitignore  README.md  package-lock.json  package.json
(+200 files in other folders)
