[project]
name = "devclaw-orchestrator"
version = "0.0.1"
description = "LangGraph-based runtime orchestrator for devclaw — replaces the markdown-skill execution model with deterministic Python orchestration + Claude/Codex CLI subprocess for cognition. No API keys: uses your Pro/Max subscription via the CLIs' OAuth session."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Denys Sychov"}]

dependencies = [
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
postgres = [
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
devclaw-orchestrator = "orchestrator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
