[project]
name = "devclaw-orchestrator"
version = "0.0.1"
description = "LangGraph-based runtime orchestrator for devclaw — replaces the markdown-skill execution model with deterministic Python orchestration + Claude/Codex CLI subprocess for cognition. No API keys: uses your Pro/Max subscription via the CLIs' OAuth session."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Denys Sychov"}]

dependencies = [
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
postgres = [
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
]
# Sandcastle (https://github.com/mattpocock/sandcastle) is the per-task sandbox
# for `code_task`. Upstream ships as a Node.js / TypeScript package on npm, not
# PyPI — there is no `pip install sandcastle`. The `SandcastleSandbox` Python
# wrapper in `orchestrator.sandbox` drives the upstream CLI via `npx`.
#
# The pinned npm version lives in `orchestrator.sandbox.SANDCASTLE_NPM_VERSION`
# (single source of truth). This extra group documents the requirement so it
# shows up in `pip install -e .[sandcastle]` and in dependency audits; the
# actual binary still has to be made available out-of-band (Node 20+ on the
# orchestrator host).
sandcastle = [
    # npm:sandcastle==0.5.2  (installed via `npx sandcastle@0.5.2`, not pip)
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

# Out-of-band runtime dependencies that aren't pip-installable. Kept here so
# operators provisioning a new orchestrator host have one place to look.
[tool.devclaw.external-deps]
sandcastle = { kind = "npm", package = "sandcastle", version = "0.5.2", required_for = ["code_task with sandbox=sandcastle"] }
node = { kind = "system", version = ">=20", required_for = ["sandcastle"] }

[project.scripts]
devclaw-orchestrator = "orchestrator.cli:main"
devclaw-mcp = "orchestrator.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
